--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,16 @@
-bin
-Makefile
-CMakeFiles
+CMakeLists.txt.user
 CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
 cmake_install.cmake
+install_manifest.txt
 compile_commands.json
+CTestTestfile.cmake
+_deps
+bin/*
+.cache
+.cmake
+build/
+CMakeUserPresets.json
