installed boost with conan

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,9 +20,8 @@ else()
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
 endif()
 
-find_package(glfw3 REQUIRED)
-find_package(GLUT REQUIRED)
+# find_package(boost REQUIRED)
+find_package(Boost 1.83.0 REQUIRED)
 file(GLOB_RECURSE MY_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 add_executable(cherno ${MY_SOURCES})
-target_link_libraries(cherno PRIVATE GLUT::GLUT)
-target_link_libraries(cherno PRIVATE glu::glu)
+target_link_libraries(cherno PRIVATE boost::boost)
