--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,17 +3,23 @@ cmake_minimum_required(VERSION 3.9.1)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# Use the package PkgConfig to detect GTK+ headers/library files
-FIND_PACKAGE(PkgConfig REQUIRED)
-PKG_CHECK_MODULES(GTK REQUIRED gtkmm-4.0)
-INCLUDE_DIRECTORIES(${GTK_INCLUDE_DIRS})
-LINK_DIRECTORIES(${GTK_LIBRARY_DIRS})
-ADD_DEFINITIONS(${GTK_CFLAGS_OTHER})
+file(
+  DOWNLOAD
+  https://github.com/cpm-cmake/CPM.cmake/releases/download/v0.38.3/CPM.cmake
+  ${CMAKE_CURRENT_BINARY_DIR}/cmake/CPM.cmake
+  EXPECTED_HASH SHA256=cc155ce02e7945e7b8967ddfaff0b050e958a723ef7aad3766d368940cb15494
+)
+include(${CMAKE_CURRENT_BINARY_DIR}/cmake/CPM.cmake)
 
+# Use the package PkgConfig to detect GTK+ headers/library files
+CPMAddPackage(
+    NAME GTK
+    GIT_REPOSITORY https://gitlab.gnome.org/GNOME/gtk.git
+    GIT_TAG master
+)
 # add executable
 project(GtkApp)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 file(GLOB_RECURSE MY_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 add_executable(GtkApp ${MY_SOURCES})
 # Define MY_SOURCES to be a list of all the source files for my project
-TARGET_LINK_LIBRARIES(GtkApp ${GTK_LIBRARIES})
+TARGET_LINK_LIBRARIES(GtkApp gtk)
