--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,17 +3,25 @@ cmake_minimum_required(VERSION 3.9.1)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+file(
+  DOWNLOAD
+  https://github.com/cpm-cmake/CPM.cmake/releases/download/v0.38.3/CPM.cmake
+  ${CMAKE_CURRENT_BINARY_DIR}/cmake/CPM.cmake
+  EXPECTED_HASH SHA256=cc155ce02e7945e7b8967ddfaff0b050e958a723ef7aad3766d368940cb15494
+)
+include(${CMAKE_CURRENT_BINARY_DIR}/cmake/CPM.cmake)
+CPMAddPackage("gh:fmtlib/fmt#7.1.3")
+
 # Use the package PkgConfig to detect GTK+ headers/library files
 FIND_PACKAGE(PkgConfig REQUIRED)
-PKG_CHECK_MODULES(GTK REQUIRED gtkmm-4.0)
+PKG_CHECK_MODULES(GTK REQUIRED gtkmm-3.0)
 INCLUDE_DIRECTORIES(${GTK_INCLUDE_DIRS})
 LINK_DIRECTORIES(${GTK_LIBRARY_DIRS})
 ADD_DEFINITIONS(${GTK_CFLAGS_OTHER})
 
 # add executable
 project(GtkApp)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 file(GLOB_RECURSE MY_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")
 add_executable(GtkApp ${MY_SOURCES})
 # Define MY_SOURCES to be a list of all the source files for my project
-TARGET_LINK_LIBRARIES(GtkApp ${GTK_LIBRARIES})
+TARGET_LINK_LIBRARIES(GtkApp ${GTK_LIBRARIES} fmt::fmt)
